@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.2254 2004/10/25 09:37:44 xtraeme Exp $
+$NetBSD: TODO,v 1.2255 2004/10/25 15:39:02 minskim Exp $
 
 Suggested new packages
 ======================
@@ -312,7 +312,6 @@ Suggested package updates
 	o libtiff-3.7.0
 	o libxklavier-1.10 [breaks gnome-2.8]
 	o licq-1.2.7
-	o liferea-0.6.0
 	o lilypond-2.2
 	o lmbench-2.0.4
 	o lout-3.29
