@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.10 2004/10/23 14:02:34 jmmv Exp $
+# $NetBSD: Makefile,v 1.11 2004/10/25 15:39:02 minskim Exp $
 
-DISTNAME=		liferea-0.5.3
-PKGREVISION=		2
+DISTNAME=		liferea-0.6.0
 CATEGORIES=		www
 MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=liferea/}
 
